--- a/app/src/main/res/layout/dialog_save_event.xml
+++ b/app/src/main/res/layout/dialog_save_event.xml
@@ -12,17 +12,17 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/screen_save_event"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:minWidth="300dp"
-        android:minHeight="300dp">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/lbl_save_event_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
             android:text="@string/lbl_save_event_title"
             app:layout_constraintBaseline_toBaselineOf="@id/txt_save_event_title"
+            app:layout_constraintEnd_toStartOf="@+id/guide_save_event"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
@@ -30,8 +30,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
             android:text="@string/lbl_save_event_date"
             app:layout_constraintBaseline_toBaselineOf="@id/btn_save_event_open_datepicker"
+            app:layout_constraintEnd_toStartOf="@+id/guide_save_event"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
@@ -39,18 +41,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
             android:text="@string/lbl_save_event_notes"
+            app:layout_constraintEnd_toStartOf="@+id/guide_save_event"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/txt_save_event_notes" />
 
         <EditText
             android:id="@+id/txt_save_event_notes"
+            android:layout_height="70dp"
             android:layout_width="0dp"
-            android:layout_height="0dp"
             android:layout_margin="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:inputType=""
+            android:inputType="textMultiLine"
+            android:lines="3"
             android:text="@={eventViewModel.eventNotes}"
             app:layout_constraintBottom_toTopOf="@id/btn_save_event_save"
             app:layout_constraintEnd_toEndOf="parent"
@@ -64,8 +69,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:layout_marginEnd="8dp"
-            android:maxLines="1"
             android:lines="1"
+            android:maxLines="1"
             android:singleLine="true"
             android:text="@={eventViewModel.eventTitle}"
             app:layout_constraintEnd_toEndOf="parent"
@@ -89,8 +94,7 @@
             android:id="@+id/guide_save_event"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.2" />
+            android:orientation="vertical" />
 
         <Button
             android:id="@+id/btn_save_event_save"
@@ -107,9 +111,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
+            android:layout_marginEnd="8dp"
             android:onClick="@{() -> eventViewModel.onCancelButtonClicked()}"
             android:text="@string/lbl_back"
             app:layout_constraintBaseline_toBaselineOf="@id/btn_save_event_save"
+            app:layout_constraintEnd_toStartOf="@+id/guide_save_event"
             app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
