--- a/app/src/main/res/layout/panel_drawing_tools.xml
+++ b/app/src/main/res/layout/panel_drawing_tools.xml
@@ -14,12 +14,13 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_margin="16dp"
+        android:layout_margin="8dp"
         android:orientation="vertical">
 
-        <ImageButton
+        <ImageView
             android:id="@+id/btn_draw_setColorBlack"
             android:layout_width="50dp"
             android:layout_height="0dp"
@@ -28,7 +29,7 @@
             android:onClick="@{() -> drawViewModel.pickColor(Color.BLACK)}"
             android:src="@drawable/circle_black" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/btn_draw_setColorBlue"
             android:layout_width="50dp"
             android:layout_height="0dp"
@@ -37,16 +38,17 @@
             android:onClick="@{() -> drawViewModel.pickColor(Color.BLUE)}"
             android:src="@drawable/circle_blue" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/btn_draw_setColorRed"
             android:layout_width="50dp"
             android:layout_height="0dp"
             android:layout_weight="1"
+
             android:contentDescription="@string/choose_red"
             android:onClick="@{() -> drawViewModel.pickColor(Color.RED)}"
             android:src="@drawable/circle_red" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/btn_draw_setColorYellow"
             android:layout_width="50dp"
             android:layout_height="0dp"
@@ -55,7 +57,7 @@
             android:onClick="@{() -> drawViewModel.pickColor(Color.YELLOW)}"
             android:src="@drawable/circle_yellow" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/btn_draw_setColorGreen"
             android:layout_width="50dp"
             android:layout_height="0dp"
@@ -66,32 +68,33 @@
 
         <Button
             android:id="@+id/btn_draw_setThinLineWidth"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:onClick="@{() -> drawViewModel.setLineWidth(LineWidth.THIN)}"
             android:text="@string/lineWidth_thin" />
 
+
         <Button
             android:id="@+id/btn_draw_setMediumLineWidth"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:onClick="@{() -> drawViewModel.setLineWidth(LineWidth.MEDIUM)}"
             android:text="@string/lineWidth_medium" />
 
         <Button
             android:id="@+id/btn_draw_setThickLineWidth"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:onClick="@{() -> drawViewModel.setLineWidth(LineWidth.THICK)}"
             android:text="@string/lineWidth_Thick" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/btn_draw_undo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:contentDescription="@string/undo"
             android:onClick="@{() -> drawViewModel.undo()}"
