--- a/app/src/main/res/layout/fragment_city_screen.xml
+++ b/app/src/main/res/layout/fragment_city_screen.xml
@@ -18,15 +18,15 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/stad"
+            android:background="@drawable/citymap_faith"
             android:contentDescription="@string/frag_main_descr_city_plan" />
         <!--AVATAR -->
         <ImageView
             android:id="@+id/image_main_avatar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="150dp"
             android:contentDescription="@string/frag_main_descr_your_avatar"
-            android:src="@drawable/meisje" />
+            android:src="@drawable/meisje_stoer" />
 
         <!-- KNOPPEN -->
         <!-- Invisible to make it transparent -->
@@ -56,28 +56,28 @@
                 android:layout_width="8dp"
                 android:layout_height="12dp"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.11" />
+                app:layout_constraintGuide_percent="0.49" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guide_loc1_top"
                 android:layout_width="8dp"
                 android:layout_height="12dp"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.38" />
+                app:layout_constraintGuide_percent="0.0" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guide_loc1_right"
                 android:layout_width="8dp"
                 android:layout_height="12dp"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.35" />
+                app:layout_constraintGuide_percent="0.73" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guide_loc1_bottom"
                 android:layout_width="8dp"
                 android:layout_height="12dp"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.57" />
+                app:layout_constraintGuide_percent="0.2" />
 
             <View
                 android:id="@+id/city_first_location"
@@ -87,17 +87,6 @@
                 app:layout_constraintBottom_toTopOf="@id/guide_loc1_bottom"
                 app:layout_constraintEnd_toStartOf="@id/guide_loc1_right"
                 app:layout_constraintStart_toStartOf="@+id/guide_loc1_left"
-                app:layout_constraintTop_toTopOf="@+id/guide_loc1_top" />
-
-            <View
-                android:id="@+id/city_third_location"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginEnd="8dp"
-                android:onClick="@{() -> cityScreenViewModel.thirdLocationClicked()}"
-                app:layout_constraintBottom_toTopOf="@id/guide_loc1_bottom"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/guide_loc2_right"
                 app:layout_constraintTop_toTopOf="@+id/guide_loc1_top" />
 
             <androidx.constraintlayout.widget.Guideline
@@ -112,21 +101,21 @@
                 android:layout_width="8dp"
                 android:layout_height="12dp"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.64" />
+                app:layout_constraintGuide_percent="0.31" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guide_loc2_right"
                 android:layout_width="8dp"
                 android:layout_height="12dp"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.64" />
+                app:layout_constraintGuide_percent="0.63" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guide_loc2_bottom"
                 android:layout_width="8dp"
                 android:layout_height="12dp"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.85" />
+                app:layout_constraintGuide_percent="0.46" />
 
             <View
                 android:id="@+id/city_second_location"
@@ -136,8 +125,10 @@
                 android:onClick="@{() -> cityScreenViewModel.secondLocationClicked()}"
                 app:layout_constraintBottom_toTopOf="@id/guide_loc2_bottom"
                 app:layout_constraintEnd_toStartOf="@id/guide_loc2_right"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/guide_loc2_left"
-                app:layout_constraintTop_toTopOf="@+id/guide_loc2_top" />
+                app:layout_constraintTop_toTopOf="@+id/guide_loc2_top"
+                app:layout_constraintVertical_bias="0.0" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 </layout>
